# project2_bochkarev_semen_m25_555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
