[tool.poetry]
name = "project2-bochkarev-semen-m25-555"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]
  
[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
